# PythonKafkaDomainLogicExample

./: Dockerfile  Makefile  README.md  docker-compose.kraft.yaml  docker-compose.yaml  example.env  pyproject.toml
app/: __main__.py  app.py  bootstrap.py  cli.py
app/controls/handlers/: base.py  image.py  produce.py  score.py
app/controls/router/: base.py  image.py  produce.py  score.py
app/core/: enum.py  model.py
app/core/admin/: __init__.py
app/core/engine/: producer.py  settings.py
app/core/io/: csv.py  image.py
app/core/schema/: schema.py
app/domain/assembly/serializer/: base.py  score.py
app/domain/client/: image.py
app/domain/models/: base.py  geo.py  image.py  score.py
app/domain/repository/: base.py  image.py  score.py
configs/: broker_jaas.conf  zookeeper_jaas.conf
easy/: admin.py  consume.py
examples/server/: app.py
test/: prepare_test_csv.py
