[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["n.mashalov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
kafka-python = "^2.0.2"
pydantic-settings = "^2.4.0"
pydantic = "^2.9.1"
typer = "^0.12.5"
fastavro = "^1.9.7"
pydantic2avro = "^0.4.1"
aiokafka = "^0.11.0"
confluent-kafka = "^2.5.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"
polyfactory = "^2.16.2"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
